<resources>
    <string name="app_name">FitFusion</string>
    <string name="home">Home</string>
    <string name="calendar">Calendar</string>
    <string name="forum">Forum</string>
    <string name="logout">Logout</string>
    <string name="welcome">Welcome</string>
    <string name="this_is_a_blank_page">This is a blank page</string>
    <string name="type">Type</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="participants">Participants</string>
    <string name="edit">Edit</string>
    <string name="cancel">Cancel</string>
    <string name="add_new_class">Add new class</string>
    <string name="my_strength_classes">My Strength Classes</string>
    <string name="my_cardio_classes">My Cardio Classes</string>
    <string name="my_yoga_classes">My Yoga Classes</string>
    <string name="typeTxt">Type:</string>
    <string name="dateTxt">Date:</string>
    <string name="timeTxt">Time:</string>
    <string name="participantsTxt">Participants:</string>
    <string name="post_title" />
    <string name="post_content" />
    <string name="author_name" />
    <string name="date_created" />
    <string name="add_new_training_session">Add new training session</string>
    <string name="add_new_trainer">Add new trainer</string>
    <string name="my_classes">My Classes</string>
    <string name="_1">1</string>
    <string name="back">back</string>
    <string name="forward">forward</string>
    <string name="sun">SUN</string>
    <string name="mon">MON</string>
    <string name="tue">TUE</string>
    <string name="wed">WED</string>
    <string name="thur">THUR</string>
    <string name="fri">FRI</string>
    <string name="sat">SAT</string>
    <string name="feb_2021">Feb 2021</string>
    <string name="active">Active:</string>
    <string name="cancel1">Cancel</string>
    <string name="date1">Date:</string>
    <string name="save">Save</string>
    <string name="time1">Time:</string>
    <string name="canceled">Canceled</string>
    <string name="textview">TextView</string>
    <string name="textview1">TextView</string>
    <string name="textview2">TextView</string>
    <string name="textview3">TextView</string>
    <string name="name_surname">Name and surname:</string>
    <string name="first_name">First name:</string>
    <string name="last_name">Last name:</string>
    <string name="email">Email:</string>
    <string name="klupi_gmail_com">klupi@gmail.com</string>
    <string name="klaric">Klaric</string>
    <string name="klara">Klara</string>
    <string name="cancel2">Cancel</string>
    <string name="date2">Date</string>
    <string name="done">Done</string>
    <string name="number">Number</string>
    <string name="select_date">Select Date</string>
    <string name="select_time">Select Time</string>
    <string name="time2">Time</string>
    <string name="date4">Date:</string>
    <string name="number_of_participants">Number of participants:</string>
    <string name="session_type">Session Type:</string>
    <string name="time3">Time:</string>
    <string name="cancel4">Cancel</string>
    <string name="done2">Done</string>
    <string name="description">Description:</string>
    <string name="email1">Email:</string>
    <string name="enter_trainer_description">Enter trainer description</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_first_name">Enter first name</string>
    <string name="enter_last_name">Enter last name</string>
    <string name="enter_password">Enter password</string>
    <string name="first_name1">First Name:</string>
    <string name="last_name1">Last name:</string>
    <string name="by">by :</string>
    <string name="password">Password:</string>
    <string name="unesite_tekst">Message</string>
    <string name="post">Post</string>
    <string name="unesite_naslov">Title</string>
    <string name="trainers">Trainers</string>
    <string name="tu_vu_e_listu_trenera_u_obliku_ime_prezime">tu vuče listu trenera u obliku Ime Prezime</string>
    <string name="completed_classes">Completed classes</string>
    <string name="tu_vu_e_listu_odra_enih_treninga_u_obliku_dd_mm_tip">tu vuče listu odrađenih treninga u obliku dd/mm tip</string>
    <string name="booked_classes">Booked classes</string>
    <string name="todo">TODO</string>
    <string name="tu_vu_e_datum_treninga">tu vuče datum treninga</string>
    <string name="tu_vu_e_vrijeme_treninga">tu vuče vrijeme treninga</string>
    <string name="tu_vu_e_tip_treninga">tu vuče tip treninga</string>
    <string name="todo1">TODO</string>
    <string name="logout1">Logout</string>
    <string name="welcome1">Welcome</string>
    <string name="cancel5">Cancel</string>
    <string name="sign_up">Sign Up</string>
    <string name="email2">Email</string>
    <string name="first_name2">First Name</string>
    <string name="last_name2">Last Name</string>
    <string name="password1">Password</string>
    <string name="show_password">Show password</string>
    <string name="create_an_account">Create an account</string>
    <string name="email3">Email:</string>
    <string name="todo3">TODO</string>
    <string name="login">Login</string>
    <string name="type_in_your_email">Type in your email</string>
    <string name="type_in_your_password">Type in your password</string>
    <string name="password2">Password:</string>
    <string name="show_password1">Show password</string>
    <string name="sign_up1">Sign Up</string>
    <string name="settings_option">My Settings</string>
    <string name="logout_option">Log out</string>
    <string name="log_in">Log In</string>
    <string name="SessionType">Session Type:</string>
    <string name="NumberOfParticipants">Number of participants:</string>
    <string name="Date">Date:</string>
    <string name="Time">Time:</string>
    <string name="SelectTime">SELECT TIME</string>
    <string name="SelectDate">SELECT DATE</string>
    <string name="monday">MON</string>
    <string name="tuesday">TUE</string>
    <string name="wednesday">WED</string>
    <string name="thursday">THUR</string>
    <string name="friday">FRI</string>
    <string name="saturday">SAT</string>
    <string name="sunday">SUN</string>
    <string name="weekly">WEEKLY</string>
    <string name="title_activity_week_view_calendar">WeekViewCalendarActivity</string>
    <string name="new_session">New Session</string>
    <string name="WeeklyButton">Weekly</string>
    <string name="save_changes">Save Changes</string>
    <string name="cancel3">Cancel</string>
    <string name="firstname1">FirstName</string>
    <string name="firstname">FirstName</string>
    <string name="lastname">LastName</string>
    <string name="lastname1">LastName</string>
    <string name="email4">Email</string>
    <string name="email5">Email</string>
    <string name="password3">Password</string>
    <string name="password4">Password</string>
    <string name="my_profile">My Profile</string>
    <string name="first_name3">First name:</string>
    <string name="last_name3">Last name:</string>
    <string name="email6">Email</string>
    <string name="reply">Reply</string>
    <string name="reply2">Reply</string>
    <string name="by_author_date_and_time">by Author - Date and Time</string>
    <string name="reply3">Reply</string>
    <string name="content">Content</string>
    <string name="title">Title</string>
    <string name="replies">Replies</string>
    <string name="event">Event</string>
    <string name="feb2_2021">Feb 2021</string>
    <string name="apply">Apply</string>
    <string name="cancel12">Cancel</string>
    <string name="date55">Date:</string>
    <string name="date222">Date</string>
    <string name="training_id">Training Id</string>
    <string name="participants2">Participants</string>
    <string name="time11">Time</string>
    <string name="type5">Type</string>
    <string name="training_id44">Training Id:</string>
    <string name="participants4">Participants:</string>
    <string name="time9">Time:</string>
    <string name="type9">Type:</string>
    <string name="select_end">select end</string>
    <string name="time_end">Time end</string>
    <string name="time_end1">Time end:</string>
    <string name="time_end3">Time end</string>
    <string name="end_time4">End time:</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="default_web_client_id" />
    <string name="PassedClasses">Passed classes</string>
    <string name="Trainers">List of trainers</string>
    <string name="my_classes_strenght">My Strength Classes</string>
    <string name="my_classes_cardio">My Cardio Classes\n</string>
    <string name="create_account">CREATE AN ACCOUNT</string>
    <string name="todo4">TODO</string>
    <string name="todo8">TODO</string>
    <string name="todo7">TODO</string>
    <string name="logo">Logo</string>
</resources>