<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/firstname"
        android:layout_width="180dp"
        android:layout_height="30dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        android:text="@string/first_name1" />

    <EditText
        android:id="@+id/etfirstname"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="40dp"
        android:ems="10"
        android:hint="@string/enter_first_name"
        android:inputType="textPersonName"
        android:autofillHints="" />

    <TextView
        android:id="@+id/lastname"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:layout_marginStart="40dp"
        android:text="@string/last_name1" />

    <EditText
        android:id="@+id/etlastname"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="40dp"
        android:ems="10"
        android:hint="@string/enter_last_name"
        android:inputType="textPersonName"
        android:autofillHints="" />

    <TextView
        android:id="@+id/email"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:layout_marginStart="40dp"
        android:text="@string/email1" />

    <EditText
        android:id="@+id/etemail"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="40dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/enter_email"
        android:autofillHints="" />

    <TextView
        android:id="@+id/password"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:layout_marginStart="40dp"
        android:text="@string/password" />

    <EditText
        android:id="@+id/etpassword"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/enter_password"
        android:autofillHints="" />

    <TextView
        android:id="@+id/description"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:layout_marginStart="40dp"
        android:text="@string/description"
        tools:ignore="TextSizeCheck" />

    <EditText
        android:id="@+id/etdescription"
        android:layout_width="332dp"
        android:layout_height="50dp"
        android:layout_marginStart="40dp"
        android:ems="10"
        android:gravity="start|top"
        android:layout_marginBottom="10dp"
        android:inputType="textMultiLine"
        android:hint="@string/enter_trainer_description"
        android:autofillHints="" />

    <Button
        android:id="@+id/Done"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:text="@string/done2"
        tools:ignore="VisualLintButtonSize" />

    <Button
        android:id="@+id/Cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="#F44336"
        android:text="@string/cancel4"
        android:textColor="#000000"
        tools:ignore="VisualLintButtonSize" />

</LinearLayout>