<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textViewFirstName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="15dp"
        android:text="@string/first_name" />

    <TextView
        android:id="@+id/textViewDisplayFirstName"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="30dp"
        android:hint="@string/first_name2" />

    <TextView
        android:id="@+id/textViewLastName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="15dp"
        android:text="@string/last_name" />

    <TextView
        android:id="@+id/textViewDisplayLastName"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginBottom="30dp"
        android:layout_marginStart="20dp"
        android:hint="@string/last_name2" />

    <TextView
        android:id="@+id/textViewEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="15dp"
        android:text="@string/email" />

    <TextView
        android:id="@+id/textViewDisplayEmail"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginBottom="30dp"
        android:layout_marginStart="20dp"
        android:hint="@string/email2" />

    <TextView
        android:id="@+id/textViewDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="15dp"
        android:text="@string/description" />

    <TextView
        android:id="@+id/textViewDisplayDescription"
        android:layout_width="370dp"
        android:layout_height="100dp"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="20dp"
        android:hint="@string/enter_trainer_description" />

    <Button
        android:id="@+id/Cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="#F44336"
        android:text="@string/cancel"
        android:textColor="#FFFFFF" />
</LinearLayout>
